--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>weather</title>
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./weather.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -46,26 +47,29 @@ function showPosition(position) {
 
   lat=position.coords.latitude
   long=position.coords.longitude
+
   console.log(long);
   fetch(`https://api.bigdatacloud.net/data/reverse-geocode-client?${lat}=37.42159&${long}=-122.0837&localityLanguage=en`).then(data=>data.json()).then(cData=>displayData(cData))
   function displayData(arrayData){
-    city=arrayData.city
+    city=arrayData.locality
 cou.innerHTML=`${city}`
     console.log(arrayData.city);
     fetch(`https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=b41ec3be35c7dac8aabbc21ba253137a`).then(data=>data.json()).then(city=>displayTemp(city))
 function displayTemp(cityArray){
-    temp1=cityArray.main.temp
+    temp1=parseInt(cityArray.main.temp- 273.15)
     t.innerHTML=`${temp1}`
 console.log(temp1);
 }
   }
 }
+
 function accessData(){
 place=place.value
 fetch(`https://api.openweathermap.org/data/2.5/weather?q=${place}&appid=b41ec3be35c7dac8aabbc21ba253137a`).then(data=>data.json()).then(city=>displayTemp(city))
 function displayTemp(cityArray){
     temp1=parseInt(cityArray.main.temp- 273.15)
     t.innerHTML=`${temp1}`
+    cou.innerHTML=`${place}`
 console.log(temp1);
 }
 }
