--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                  <input type="text" placeholder="Cty Name" id="pl" class="form-control w-50" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                             <button type="button" class="btn btn-dark mt-2" onclick="accessData()">Search</button> 
                             <button class="btn btn-dark mt-2" onclick="getLocation()"><i class="fa-solid fa-location-crosshairs fa-lg" style="color: #f7f7f8;"></i>Current Location</button> 
-                            <div class="location"><i class="fa-solid fa-location-dot fa-2xl mt-4" style="color: #ffffff;"></i><h1 class="text-center"id="cou"></h1></div>
+                            <div class="location"><i class="fa-solid fa-location-dot fa-2xl " style="color: #ffffff;"></i><h1 class="text-center"id="cou"></h1></div>
                 <h4 id="da" class="text-center"></h4>
                 <h4 id="ti" class="text-center" ></h4>
                 <div class=" temp " id="temp">
