--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ lat=position.coords.latitude
   function displayData(arrayData){
     city=arrayData.address.town
     city=arrayData.address.city
-    city=arrayData.address.city
+    city=arrayData.address.village
 cou.innerHTML=`${city}`
 console.log(city);
     
